# test

./: settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  OpenCVInitializer.cpp
app/src/main/java/com/example/test/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
